--- a/Subscriptions.Api/Subscriptions.Api.csproj
+++ b/Subscriptions.Api/Subscriptions.Api.csproj
@@ -9,7 +9,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Controllers" />
+      <ProjectReference Include="..\Subscriptions.Application\Subscriptions.Application.csproj" />
     </ItemGroup>
 
 </Project>
