--- a/Subscriptions.Application/Subscriptions.Application.csproj
+++ b/Subscriptions.Application/Subscriptions.Application.csproj
@@ -9,7 +9,9 @@
       <PackageReference Include="FluentValidation" Version="9.5.3" />
       <PackageReference Include="MediatR" Version="9.0.0" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+      <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
     </ItemGroup>
 
     <ItemGroup>
