--- a/Subscriptions.Persistence/Subscriptions.Persistence.csproj
+++ b/Subscriptions.Persistence/Subscriptions.Persistence.csproj
@@ -8,4 +8,8 @@
       <ProjectReference Include="..\Subscriptions.Application\Subscriptions.Application.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Dapper" Version="2.0.123" />
+    </ItemGroup>
+
 </Project>
