--- a/Subscriptions.Api/Subscriptions.Api.csproj
+++ b/Subscriptions.Api/Subscriptions.Api.csproj
@@ -5,12 +5,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Subscriptions.Application\Subscriptions.Application.csproj" />
+      <ProjectReference Include="..\Subscriptions.Infrastructure\Subscriptions.Infrastructure.csproj" />
+      <ProjectReference Include="..\Subscriptions.Persistence\Subscriptions.Persistence.csproj" />
     </ItemGroup>
 
 </Project>
