--- a/Subscriptions.Api/appsettings.Development.json
+++ b/Subscriptions.Api/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "Subscriptions_db": "User ID=postgres;Password=0624027235;Host=localhost;Port=5432;Database=subscriptions;IncludeErrorDetails=True;"
   }
 }
