--- a/Subscriptions.Domain.Tests/Subscriptions.Domain.Tests.csproj
+++ b/Subscriptions.Domain.Tests/Subscriptions.Domain.Tests.csproj
@@ -23,4 +23,8 @@
       <ProjectReference Include="..\Subscriptions.Domain\Subscriptions.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Entities" />
+    </ItemGroup>
+
 </Project>
