adding masstransit and add persistence to cmds

--- a/Subscriptions.Application.Tests/Subscriptions.Application.Tests.csproj
+++ b/Subscriptions.Application.Tests/Subscriptions.Application.Tests.csproj
@@ -24,4 +24,8 @@
       <ProjectReference Include="..\Subscriptions.Application\Subscriptions.Application.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Commands" />
+    </ItemGroup>
+
 </Project>
