--- a/Subscriptions.Infrastructure/Subscriptions.Infrastructure.csproj
+++ b/Subscriptions.Infrastructure/Subscriptions.Infrastructure.csproj
@@ -6,6 +6,12 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Subscriptions.Application\Subscriptions.Application.csproj" />
+      <ProjectReference Include="..\Subscriptions.Consumers\Subscriptions.Consumers.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
+      <PackageReference Include="MassTransit.Azure.ServiceBus.Core" Version="7.3.1" />
     </ItemGroup>
 
 </Project>
