--- a/Subscriptions.Persistence/Subscriptions.Persistence.csproj
+++ b/Subscriptions.Persistence/Subscriptions.Persistence.csproj
@@ -13,4 +13,8 @@
       <PackageReference Include="Npgsql" Version="6.0.2" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Commands\Shared" />
+    </ItemGroup>
+
 </Project>
