creating features and fixing bugs

--- a/Subscriptions.Api/appsettings.Development.json
+++ b/Subscriptions.Api/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "Subscriptions_db": "User ID=postgres;Password=0624027235;Host=localhost;Port=5432;Database=subscriptions;IncludeErrorDetails=True;"
+    "Subscriptions_db": "User ID=postgres;Password=123456789;Host=localhost;Port=5432;Database=subscriptions_db;IncludeErrorDetails=True;"
   }
 }
