--- a/Subscriptions.Domain/Subscriptions.Domain.csproj
+++ b/Subscriptions.Domain/Subscriptions.Domain.csproj
@@ -8,4 +8,8 @@
       <PackageReference Include="NodaTime" Version="3.1.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Enums" />
+    </ItemGroup>
+
 </Project>
