--- a/Subscriptions.Application/Subscriptions.Application.csproj
+++ b/Subscriptions.Application/Subscriptions.Application.csproj
@@ -21,4 +21,8 @@
       <ProjectReference Include="..\Subscriptions.Domain\Subscriptions.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Common\Validators" />
+    </ItemGroup>
+
 </Project>
